sort list, fix popup position, scrollbar changes

--- a/source/app/stylesheets/base/_storymaps.scss
+++ b/source/app/stylesheets/base/_storymaps.scss
@@ -334,7 +334,7 @@ html, body{
 }
 
 /* Custom Webkit Scrollbar */
-body:not(.touch){
+body{
 	::-webkit-scrollbar {
 		width: 8px;
 		background: $dark-gray;
